# Douren-Monorepo

./: .cursorrules  .dockerignore  .env.local.example  .env.vault  .eslintrc.cjs  .gitattributes  .gitignore  .infisical.json  .npmrc  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile.agent  Makefile  README.md  REVIEW_PR207.md  clean_env.bat  commitlint.config.js  copy_env.bat  docker-compose.agent.yml  extract-function.ts  function-signatures.json  generate-react-cli.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.sh  turbo.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: agent-image-publish.yaml  ci.yaml  deploy.yaml  main-be-img-prd-deploy.yaml  main-be-img-stg-deploy.yaml  main-be-prd-deploy.yaml  main-be-stg-deploy.yaml  main-be-trigger-prd-deploy.yaml  main-cms-prd-deploy.yaml  main-cms-stg-deploy.yaml  main-fe-prd-deploy.yaml  main-fe-stg-deploy.yaml  main-prd-deploy.yaml  main-preview-router-deploy.yaml  (+2 more)
.husky/: post-commit  pre-push
.superset/: config.json
docs/: cms-artist-portal-ux-review.md  deployment-previews.md
scripts/: .env.example  README.md  TAG_MIGRATION_README.md  agent-bootstrap.sh  booth-backfill-lib.mjs  dev.js  generate-env-binding.js  infisical-headless.sh  migrate-booths.mjs  migrate-tags-to-junction-table.sql  preview-tag-migration.sql  run-tag-migration.sh  sync-env-to-infisical.js  upload-db.py  worktree.sh
src/: App.jsx  index.css  index.ts  main.jsx  main.tsx
steering/: config.md
types/: Artist.ts  FF.ts  OldFF.ts  supabase.ts
(+951 files in other folders)
