[project]
name = "douren-monorepo"
version = "0.1.0"
description = ""
authors = [
    {name = "Stangen",email = "stangendeveloper@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "requests>=2.28.0", 
    "python-dotenv>=1.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
